@@ -7,6 +7,7 @@
 	js : upgraded jquery version
 	sys : added "in" operator for spod macros
 	macro : added ECheckType
+	macro : added TLazy for not-yet-typed class fields
 
 2011-09-25: 2.08
 	js : added js.JQuery
